--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Risen</title>
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/Risen Logo.png" type="image/x-icon">
  <style>
 @import url('https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&family=Bitcount:wght@100..900&family=DM+Serif+Text:ital@0;1&family=Klee+One&family=Monomakh&family=Press+Start+2P&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
